########### 2015-5-27 #################
alter table shop_weixin_product add column created datetime NOT NULL;
alter table shop_weixin_product add column modified datetime NOT NULL;

alter table shop_weixin_productsku add column created datetime NOT NULL;
alter table shop_weixin_productsku add column modified datetime NOT NULL;
########### 2015-5-26  #################
alter table shop_items_product add column is_verify tinyint NOT NULL;
alter table shop_items_product add column shelf_status int(11) NOT NULL;
########### 2015-5-14  #################
alter table xiaolumm_carrylog add column log_type varchar(8) NOT NULL;
alter table xiaolumm_carrylog add column carry_type varchar(8) NOT NULL;

update xiaolumm_carrylog set status='confirmed',log_type='refund',carry_type='in' where status='confirmed';
update xiaolumm_carrylog set status='confirmed',log_type='buy',carry_type='out' where status='consumed';

alter table flashsale_tongji_shopping_day add column buyercount int(11) NOT NULL;
alter table flashsale_tongji_shopping add column wxordernick varchar(32) NOT NULL;
########### 2015-5-7  #################
ALTER TABLE `shop_weixin_user` ADD INDEX shop_weixin_user_vmobile(vmobile);
########### 2015-5-5  #################
alter table shop_items_productsku add column lock_num int(11) NOT NULL;
alter table flashsale_productdetail add column buy_limit tinyint(1) NOT NULL;
alter table flashsale_productdetail add column per_limit int(11) NOT NULL;
########### 2015-5-4  #################
ALTER TABLE `xiaolumm_xiaolumama` ADD column charge_status varchar(16) NOT NULL,ADD INDEX `xiaolumm_xiaolumama`(`charge_status`);
ALTER TABLE `xiaolumm_xiaolumama` ADD column user_group_id bigint(20) DEFAULT NULL, ADD CONSTRAINT `xiaolumm_user_group_id` FOREIGN KEY (`user_group_id`) REFERENCES `shop_weixin_group` (`id`);
########### 2015-3-31  #################
create index idx_mergetrade_receiver_phone on shop_trades_mergetrade(receiver_phone);
########### 2015-3-23  #################