@@ -56,7 +56,9 @@ class OrderDetail(models.Model):
     buy_quantity = models.IntegerField(default=0, verbose_name=u'产品数量')
     buy_unitprice = models.FloatField(default=0, verbose_name=u'买入价格')
     total_price = models.FloatField(default=0, verbose_name=u'单项总价')
-    arrival_quantity = models.IntegerField(default=0, verbose_name=u'到货数量')
+    arrival_quantity = models.IntegerField(default=0, verbose_name=u'正品数量')
+    inferior_quantity = models.IntegerField(default=0, verbose_name=u'次品数量')
+    non_arrival_quantity = models.IntegerField(default=0, verbose_name=u'未到数量')
     created = models.DateField(auto_now_add=True, verbose_name=u'生成日期')
     updated = models.DateField(auto_now_add=True, verbose_name=u'更新日期')
 
