@@ -51,7 +51,7 @@
                 var callback = function (res) {
                     if (res == "OK") {
                         p.text(parseInt(p.text()) - 1);
-                    }else if (res == "deleted"){
+                    } else if (res == "deleted") {
                         window.location.reload();
                     }
                 };
@@ -78,15 +78,20 @@
         }
         function changearrived(orderdetailid) {
             var index1 = "arrival_quantity_" + orderdetailid;
-            var index2 = "arrived_num_" + orderdetailid;
-            p1 = $("#" + index1);
-            p2 = $("#" + index2);
+            var index_of_inferior_num = "inferior_quantity_" + orderdetailid;
+            var index_of_inferior_input = "inferior_num_" + orderdetailid;
+            var index_of_arrived = "arrived_num_" + orderdetailid;
+            var p1 = $("#" + index1);
+            var p2 = $("#" + index_of_arrived);
+            var inferior_input = $("#" + index_of_inferior_input);
+            var inferior_num = $("#" + index_of_inferior_num);
             var url = "/sale/dinghuo/changearrivalquantity/";
-            var data = {"orderdetailid": orderdetailid, "arrived_num": p2.val()};
+            var data = {"orderdetailid": orderdetailid, "arrived_num": p2.val(), "inferior_num": inferior_input.val()};
             var callback = function (res) {
                 var dataObj = eval("(" + res + ")");
                 if (dataObj.flag) {
                     p1.html(dataObj.num)
+                    inferior_num.html(dataObj.inferior_num)
                 } else {
                     alert("超过购买总数或者没有填写数量")
                 }
@@ -144,7 +149,7 @@
                                 }
                             });
                             var scroll_offset = $("#searchfield").offset();
-{#                            var height = document.body.scrollHeight;#}
+                            {#                            var height = document.body.scrollHeight;#}
                             $('html,body').animate({scrollTop: scroll_offset.top}, 800);
                         }, 'json');
             })
@@ -297,11 +302,13 @@
             <th>商品名称</th>
             <th>图片</th>
             <th>规格</th>
-            <th>数量</th>
+            <th>购买数量</th>
             <th>买入价格</th>
             <th>单项价格</th>
-            <th>已入库数</th>
-            <th>到货数量</th>
+            <th>已入正品数</th>
+            <th>次品数</th>
+            <th>正品数量</th>
+            <th>次品数量</th>
             <th>操作</th>
             </thead>
             <tbody>
@@ -333,9 +340,15 @@
                             </a>
                         {% endif %}
                     </td>
-                    <td>
-                        <input type="number" class="form-control" min="0" max="{{ order.buy_quantity }}"
-                               name="arrived_num" id="arrived_num_{{ order.id }}" required="required">
+                    <td><span id="inferior_quantity_{{ order.id }}">{{ order.inferior_quantity }}</span>
+                    </td>
+                    <td width="90px">
+                        <input type="number" class="form-control" min="0" value="0" name="arrived_num"
+                               id="arrived_num_{{ order.id }}">
+                    </td>
+                    <td width="90px">
+                        <input type="number" class="form-control" min="0" value="0" name="inferior_num"
+                               id="inferior_num_{{ order.id }}">
                     </td>
                     <td><input type="button" class="btn btn-default" onclick="changearrived({{ order.id }})"
                                value="加入库存"></td>
