@@ -1,3 +1,7 @@
+########### 2015-6-2 #################
+alter table suplychain_flashsale_orderdetail add column non_arrival_quantity int(11) not Null after arrival_quantity;
+alter table suplychain_flashsale_orderdetail add column inferior_quantity int(11) not Null after non_arrival_quantity;
+
 ########### 2015-5-27 #################
 alter table shop_weixin_product add column created datetime NOT NULL;
 alter table shop_weixin_product add column modified datetime NOT NULL;
